// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Avvo Logo SVG 200px wide dark blue 1`] = `
<svg
  viewBox="0 0 381.2 111.4"
  width="200px"
>
  <path
    d="M339.1 111.4c23.1 0 42.1-18.5 42.1-41.8 0-23.4-19-42-42.1-42-23.3 0-42.3 18.5-42.3 42 .1 23.3 19 41.8 42.3 41.8m-200.7-.3c36.9 0 65.1-45.6 67-82.2h-27.2c-3 23.6-10.6 40.4-20.6 48.8-.8.8-1.3.3-1.3-.3L152.6 29h-26.8l7.2 78c.3 3.2 2.8 4.1 5.4 4.1m88.5 0c36.9 0 65.1-45.6 67-82.2h-27.2c-3 23.6-10.6 40.4-20.6 48.8-.8.8-1.3.3-1.3-.3L241.1 29h-26.8l7.1 78.1c.4 3.1 2.9 4 5.5 4M78.2 36.4c.8-.8 1.6-.6 1.6.3l2.4 31.8H51.5c9.1-13.9 18.8-25.3 26.7-32.1m260.8 51c-9.3 0-16.9-7.6-16.9-17.7s7.6-17.9 16.9-17.9 17.1 7.8 17.1 17.9c0 10.1-7.8 17.7-17.1 17.7M85.3 110.6h29.4L105.6 6.8c-.3-4.3-3.5-5.5-8.9-4.9C60.3 6.3 15.4 66.8 0 110.6h29.6C32 104.3 34.8 98 38 92h45.9l1.4 18.6z"
    fill="#003c6a"
  />
</svg>
`;

exports[`Storyshots Avvo Logo SVG 500px wide electric blue 1`] = `
<svg
  color="#26DDFC"
  viewBox="0 0 381.2 111.4"
  width="500px"
>
  <path
    d="M339.1 111.4c23.1 0 42.1-18.5 42.1-41.8 0-23.4-19-42-42.1-42-23.3 0-42.3 18.5-42.3 42 .1 23.3 19 41.8 42.3 41.8m-200.7-.3c36.9 0 65.1-45.6 67-82.2h-27.2c-3 23.6-10.6 40.4-20.6 48.8-.8.8-1.3.3-1.3-.3L152.6 29h-26.8l7.2 78c.3 3.2 2.8 4.1 5.4 4.1m88.5 0c36.9 0 65.1-45.6 67-82.2h-27.2c-3 23.6-10.6 40.4-20.6 48.8-.8.8-1.3.3-1.3-.3L241.1 29h-26.8l7.1 78.1c.4 3.1 2.9 4 5.5 4M78.2 36.4c.8-.8 1.6-.6 1.6.3l2.4 31.8H51.5c9.1-13.9 18.8-25.3 26.7-32.1m260.8 51c-9.3 0-16.9-7.6-16.9-17.7s7.6-17.9 16.9-17.9 17.1 7.8 17.1 17.9c0 10.1-7.8 17.7-17.1 17.7M85.3 110.6h29.4L105.6 6.8c-.3-4.3-3.5-5.5-8.9-4.9C60.3 6.3 15.4 66.8 0 110.6h29.6C32 104.3 34.8 98 38 92h45.9l1.4 18.6z"
    fill="#26DDFC"
  />
</svg>
`;

exports[`Storyshots BreadcrumbLinks Amos links 1`] = `
<div
  style={
    Object {
      "paddingTop": "10px",
    }
  }
>
  <span>
    <a
      className="Link-DKeTA lnlLQC"
      href="undefinedprofile/dashboard"
    >
      My Avvo
    </a>
     
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-chevron-right fa-w-10 "
      data-icon="chevron-right"
      data-prefix="fas"
      role="img"
      style={
        Object {
          "color": "#CCCCCC",
        }
      }
      viewBox="0 0 320 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M285.476 272.971L91.132 467.314c-9.373 9.373-24.569 9.373-33.941 0l-22.667-22.667c-9.357-9.357-9.375-24.522-.04-33.901L188.505 256 34.484 101.255c-9.335-9.379-9.317-24.544.04-33.901l22.667-22.667c9.373-9.373 24.569-9.373 33.941 0L285.475 239.03c9.373 9.372 9.373 24.568.001 33.941z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
     
  </span>
  <span>
    <a
      className="Link-DKeTA lnlLQC"
      href="undefinedprofile/impression_stats"
    >
      Analytics
    </a>
     
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-chevron-right fa-w-10 "
      data-icon="chevron-right"
      data-prefix="fas"
      role="img"
      style={
        Object {
          "color": "#CCCCCC",
        }
      }
      viewBox="0 0 320 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M285.476 272.971L91.132 467.314c-9.373 9.373-24.569 9.373-33.941 0l-22.667-22.667c-9.357-9.357-9.375-24.522-.04-33.901L188.505 256 34.484 101.255c-9.335-9.379-9.317-24.544.04-33.901l22.667-22.667c9.373-9.373 24.569-9.373 33.941 0L285.475 239.03c9.373 9.372 9.373 24.568.001 33.941z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
     
  </span>
  Storybook
</div>
`;

exports[`Storyshots Button primary button 1`] = `
<a
  className="Button__PrimaryButtonLink-ghpTYh jUufNi"
  href={null}
  onClick={[Function]}
>
  Hello Button
</a>
`;

exports[`Storyshots Button with some emoji 1`] = `
<a
  className="Button__SecondaryButtonLink-euWmas drZepp"
  href={null}
  onClick={[Function]}
>
  😀 😎 👍 💯
</a>
`;

exports[`Storyshots Button with text 1`] = `
<a
  className="Button__SecondaryButtonLink-euWmas drZepp"
  href={null}
  onClick={[Function]}
>
  Hello Button
</a>
`;

exports[`Storyshots Checkbox default checked 1`] = `
<input
  checked={true}
  defaultChecked={undefined}
  defaultValue={undefined}
  onChange={[Function]}
  type="checkbox"
/>
`;

exports[`Storyshots Checkbox unchecked 1`] = `
<input
  checked={false}
  defaultChecked={undefined}
  defaultValue={undefined}
  onChange={[Function]}
  type="checkbox"
/>
`;

exports[`Storyshots Icons ChevronDown icon 1`] = `
<svg
  aria-hidden="true"
  className="svg-inline--fa fa-chevron-down fa-w-14 "
  data-icon="chevron-down"
  data-prefix="fas"
  role="img"
  style={Object {}}
  viewBox="0 0 448 512"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
    fill="currentColor"
    style={Object {}}
  />
</svg>
`;

exports[`Storyshots Icons ChevronLeft icon 1`] = `
<svg
  aria-hidden="true"
  className="svg-inline--fa fa-chevron-left fa-w-10 "
  data-icon="chevron-left"
  data-prefix="fas"
  role="img"
  style={Object {}}
  viewBox="0 0 320 512"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M34.52 239.03L228.87 44.69c9.37-9.37 24.57-9.37 33.94 0l22.67 22.67c9.36 9.36 9.37 24.52.04 33.9L131.49 256l154.02 154.75c9.34 9.38 9.32 24.54-.04 33.9l-22.67 22.67c-9.37 9.37-24.57 9.37-33.94 0L34.52 272.97c-9.37-9.37-9.37-24.57 0-33.94z"
    fill="currentColor"
    style={Object {}}
  />
</svg>
`;

exports[`Storyshots Icons ChevronRight icon 1`] = `
<svg
  aria-hidden="true"
  className="svg-inline--fa fa-chevron-right fa-w-10 "
  data-icon="chevron-right"
  data-prefix="fas"
  role="img"
  style={Object {}}
  viewBox="0 0 320 512"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M285.476 272.971L91.132 467.314c-9.373 9.373-24.569 9.373-33.941 0l-22.667-22.667c-9.357-9.357-9.375-24.522-.04-33.901L188.505 256 34.484 101.255c-9.335-9.379-9.317-24.544.04-33.901l22.667-22.667c9.373-9.373 24.569-9.373 33.941 0L285.475 239.03c9.373 9.372 9.373 24.568.001 33.941z"
    fill="currentColor"
    style={Object {}}
  />
</svg>
`;

exports[`Storyshots Icons ChevronUp icon 1`] = `
<svg
  aria-hidden="true"
  className="svg-inline--fa fa-chevron-up fa-w-14 "
  data-icon="chevron-up"
  data-prefix="fas"
  role="img"
  style={Object {}}
  viewBox="0 0 448 512"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M240.971 130.524l194.343 194.343c9.373 9.373 9.373 24.569 0 33.941l-22.667 22.667c-9.357 9.357-24.522 9.375-33.901.04L224 227.495 69.255 381.516c-9.379 9.335-24.544 9.317-33.901-.04l-22.667-22.667c-9.373-9.373-9.373-24.569 0-33.941L207.03 130.525c9.372-9.373 24.568-9.373 33.941-.001z"
    fill="currentColor"
    style={Object {}}
  />
</svg>
`;

exports[`Storyshots Icons Envelope icon 1`] = `
<svg
  aria-hidden="true"
  className="svg-inline--fa fa-envelope fa-w-16 "
  data-icon="envelope"
  data-prefix="fas"
  role="img"
  style={Object {}}
  viewBox="0 0 512 512"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M502.3 190.8c3.9-3.1 9.7-.2 9.7 4.7V400c0 26.5-21.5 48-48 48H48c-26.5 0-48-21.5-48-48V195.6c0-5 5.7-7.8 9.7-4.7 22.4 17.4 52.1 39.5 154.1 113.6 21.1 15.4 56.7 47.8 92.2 47.6 35.7.3 72-32.8 92.3-47.6 102-74.1 131.6-96.3 154-113.7zM256 320c23.2.4 56.6-29.2 73.4-41.4 132.7-96.3 142.8-104.7 173.4-128.7 5.8-4.5 9.2-11.5 9.2-18.9v-19c0-26.5-21.5-48-48-48H48C21.5 64 0 85.5 0 112v19c0 7.4 3.4 14.3 9.2 18.9 30.6 23.9 40.7 32.4 173.4 128.7 16.8 12.2 50.2 41.8 73.4 41.4z"
    fill="currentColor"
    style={Object {}}
  />
</svg>
`;

exports[`Storyshots Icons Globe icon 1`] = `
<svg
  aria-hidden="true"
  className="svg-inline--fa fa-globe fa-w-16 "
  data-icon="globe"
  data-prefix="fas"
  role="img"
  style={Object {}}
  viewBox="0 0 512 512"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M364.215 192h131.43c5.439 20.419 8.354 41.868 8.354 64s-2.915 43.581-8.354 64h-131.43c5.154-43.049 4.939-86.746 0-128zM185.214 352c10.678 53.68 33.173 112.514 70.125 151.992.221.001.44.008.661.008s.44-.008.661-.008c37.012-39.543 59.467-98.414 70.125-151.992H185.214zm174.13-192h125.385C452.802 84.024 384.128 27.305 300.95 12.075c30.238 43.12 48.821 96.332 58.394 147.925zm-27.35 32H180.006c-5.339 41.914-5.345 86.037 0 128h151.989c5.339-41.915 5.345-86.037-.001-128zM152.656 352H27.271c31.926 75.976 100.6 132.695 183.778 147.925-30.246-43.136-48.823-96.35-58.393-147.925zm206.688 0c-9.575 51.605-28.163 104.814-58.394 147.925 83.178-15.23 151.852-71.949 183.778-147.925H359.344zm-32.558-192c-10.678-53.68-33.174-112.514-70.125-151.992-.221 0-.44-.008-.661-.008s-.44.008-.661.008C218.327 47.551 195.872 106.422 185.214 160h141.572zM16.355 192C10.915 212.419 8 233.868 8 256s2.915 43.581 8.355 64h131.43c-4.939-41.254-5.154-84.951 0-128H16.355zm136.301-32c9.575-51.602 28.161-104.81 58.394-147.925C127.872 27.305 59.198 84.024 27.271 160h125.385z"
    fill="currentColor"
    style={Object {}}
  />
</svg>
`;

exports[`Storyshots Icons Person icon 1`] = `
<svg
  aria-hidden="true"
  className="svg-inline--fa fa-user fa-w-16 "
  data-icon="user"
  data-prefix="fas"
  role="img"
  style={Object {}}
  viewBox="0 0 512 512"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M256 0c88.366 0 160 71.634 160 160s-71.634 160-160 160S96 248.366 96 160 167.634 0 256 0zm183.283 333.821l-71.313-17.828c-74.923 53.89-165.738 41.864-223.94 0l-71.313 17.828C29.981 344.505 0 382.903 0 426.955V464c0 26.51 21.49 48 48 48h416c26.51 0 48-21.49 48-48v-37.045c0-44.052-29.981-82.45-72.717-93.134z"
    fill="currentColor"
    style={Object {}}
  />
</svg>
`;

exports[`Storyshots Icons Phone icon 1`] = `
<svg
  aria-hidden="true"
  className="svg-inline--fa fa-phone fa-w-16 "
  data-icon="phone"
  data-prefix="fas"
  role="img"
  style={Object {}}
  viewBox="0 0 512 512"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M493.397 24.615l-104-23.997c-11.314-2.611-22.879 3.252-27.456 13.931l-48 111.997a24 24 0 0 0 6.862 28.029l60.617 49.596c-35.973 76.675-98.938 140.508-177.249 177.248l-49.596-60.616a24 24 0 0 0-28.029-6.862l-111.997 48C3.873 366.516-1.994 378.08.618 389.397l23.997 104C27.109 504.204 36.748 512 48 512c256.087 0 464-207.532 464-464 0-11.176-7.714-20.873-18.603-23.385z"
    fill="currentColor"
    style={Object {}}
  />
</svg>
`;

exports[`Storyshots Textbox with a placeholder 1`] = `
<input
  className="Textbox__StyledTextbox-bzsmBu jrCfXF"
  defaultChecked={undefined}
  defaultValue={undefined}
  onChange={[Function]}
  placeholder="Insert text here"
  type="text"
  value=""
/>
`;

exports[`Storyshots Textbox with default text 1`] = `
<input
  className="Textbox__StyledTextbox-bzsmBu jrCfXF"
  defaultChecked={undefined}
  defaultValue={undefined}
  onChange={[Function]}
  placeholder=""
  type="text"
  value="Initial text"
/>
`;
